fix scroll and overflow issues

--- a/app/assets/stylesheets/components/agency-tab.scss
+++ b/app/assets/stylesheets/components/agency-tab.scss
@@ -10,7 +10,6 @@
 
   .agency-upper {
     position: relative;
-    overflow: hidden;
 
     .image-text-box {
       position: absolute;
@@ -301,6 +300,14 @@
           bottom: 0;
           width: 50px;
           height: 50px;
+          opacity: 0;
+          -moz-transition: all 0.3s ease-in-out;
+          -webkit-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out;
+        }
+
+        .play:hover {
+          opacity: 1;
         }
 
         .video-inner {
@@ -312,9 +319,13 @@
         }
 
         .video-inner:hover {
-          -moz-transform: scale(1.1);
-          -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+          -moz-transform: scale(1.05);
+          -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+
+          + .play {
+            opacity: 1;
+          }
         }
       }
       .video-text {
@@ -437,7 +448,7 @@
       margin-top: 200px;
       background: rgba(44, 44, 44, 0.247);
       position: relative;
-      overflow: hidden;
+      // overflow: hidden;
 
       .lower-hero {
         position: absolute;
